--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
